Upload Media button fixes, disables while loading, adjust spacing and conditional classes for button and messages space.

--- a/src/components/messages/Messages.module.scss
+++ b/src/components/messages/Messages.module.scss
@@ -1,4 +1,4 @@
 .messages {
-    height: 440px;
+    height: 62vh;
     overflow-y: scroll;
 }
